Added user page

--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -3,7 +3,9 @@
   <% include ./partials/head %>
   <body class="container">
     <% include ./partials/header %>
-
+    <h1>
+    Good morning
+    </h1>
     <% include ./partials/footer %>
   </body>
 </html>
