--- a/views/partials/userpage.ejs
+++ b/views/partials/userpage.ejs
@@ -2,5 +2,26 @@
 <html>
   <body class="container">
     <h1>Good morning amazing <%= user.fname %> <%= user.lname %></h1>
+    <div class="image1">
+      <img src="" alt="">
+    </div>
+    <div>
+      <h2>Outfit suggestion :</h2>
+
+      <p><%- weather[0]["weather_state_name"] %></p>
+      <p><%- weather[0]["the_temp"] %></p>
+      <p>A long sleeve shirt and pants would be great for today</p>
+      <p>Don't forget to take your umbrella</p>
+    </div>
+    <div class="image2">
+      <img src="" alt="">
+    </div>
+    <div>
+      <h2>Breakfast suggestion :</h2>
+      <p>It's the perfect day for a smoothie and a florentine eggs bagel</p>
+    </div>
+    <div class="image3">
+      <img src="" alt="">
+    </div>
   </body>
 </html>
