--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
     <h4>Good morning amazing guest !</h4>
     <p>Log in or sign up to improve your morning mood</p>
     <% } %>
-
+    <img src="https://media.giphy.com/media/lyVNcb1n5Ob0Q/giphy.gif" alt=""><br>
     <% include ./partials/footer %>
   </body>
 </html>
