--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -10,6 +10,12 @@
       <input type="text" name="fname"><br>
       <label for="">Last Name:</label>
       <input type="text" name="lname"><br>
+      <label for="exampleRecipientInput">City:</label>
+      <select class="u-full-width" id="exampleRecipientInput">
+        <option value="Option 1">New York</option>
+        <option value="Option 2">London</option>
+        <option value="Option 3">Paris</option>
+      </select><br>
       <label for="">Email:</label>
       <input type="text" name="email"><br>
       <label for="">Password:</label>
