--- a/views/partials/userpage.ejs
+++ b/views/partials/userpage.ejs
@@ -6,10 +6,12 @@
       <img src="" alt="">
     </div>
     <div>
-      <h2>Outfit suggestion :</h2>
-
-      <p><%- weather[0]["weather_state_name"] %></p>
-      <p><%- weather[0]["the_temp"] %></p>
+      <h2>Today's outfit :</h2>
+      <!-- <p><%- weather[0]["weather_state_name"] %></p>
+      <p><%- weather[0]["the_temp"] %></p> -->
+      <img class="stateicon" src="https://www.metaweather.com/static/img/weather/s.svg" alt="">
+      <p>Showers</p>
+      <p>Temp: 26°C</p>
       <p>A long sleeve shirt and pants would be great for today</p>
       <p>Don't forget to take your umbrella</p>
     </div>
@@ -17,8 +19,8 @@
       <img src="" alt="">
     </div>
     <div>
-      <h2>Breakfast suggestion :</h2>
-      <p>It's the perfect day for a smoothie and a florentine eggs bagel</p>
+      <h2>Breakfast :</h2>
+      <p>It's the perfect day for an orange/kiwi smoothie and a florentine eggs bagel</p>
     </div>
     <div class="image3">
       <img src="" alt="">
