Some poor content

--- a/views/partials/userpage.ejs
+++ b/views/partials/userpage.ejs
@@ -13,13 +13,14 @@
       <p>Showers</p>
       <p>Temp: 26°C</p>
       <p>A long sleeve shirt and pants would be great for today</p>
-      <p>Don't forget to take your umbrella</p>
+      <p>Wear sneakers and don't forget to take your umbrella</p>
     </div>
     <div class="image2">
       <img src="" alt="">
     </div>
     <div>
       <h2>Breakfast :</h2>
+      <img src="http://static4.fjcdn.com/thumbnails/comments/Stalker+clear+sky+will+be+made+or+should+i+say+_e7daf993bc6b04c6ecfaa25eb34a7b4a.gif" alt="">
       <p>It's the perfect day for an orange/kiwi smoothie and a florentine eggs bagel</p>
     </div>
     <div class="image3">
