Last poor modifications

--- a/views/partials/userpage.ejs
+++ b/views/partials/userpage.ejs
@@ -3,7 +3,7 @@
   <body class="container">
     <h1>Good morning amazing <%= user.fname %> <%= user.lname %></h1>
     <div class="image1">
-      <img src="" alt="">
+      <img src="http://s6.favim.com/orig/140412/carrot-flowers-frozen-snow-Favim.com-1661118.gif" alt="">
     </div>
     <div>
       <h2>Today's outfit :</h2>
@@ -14,15 +14,14 @@
       <p>Wear sneakers and don't forget to take your umbrella</p>
     </div>
     <div class="image2">
-      <img src="" alt="">
+      <img src="http://static4.fjcdn.com/thumbnails/comments/Stalker+clear+sky+will+be+made+or+should+i+say+_e7daf993bc6b04c6ecfaa25eb34a7b4a.gif" alt="">
     </div>
     <div>
       <h2>Breakfast :</h2>
-      <img src="http://static4.fjcdn.com/thumbnails/comments/Stalker+clear+sky+will+be+made+or+should+i+say+_e7daf993bc6b04c6ecfaa25eb34a7b4a.gif" alt="">
       <p>It's the perfect day for an orange/kiwi smoothie and a florentine eggs bagel</p>
     </div>
     <div class="image3">
-      <img src="" alt="">
+      <img src="https://lh3.googleusercontent.com/-DkFWLLileuc/VYQy116DKtI/AAAAAAAALhM/Tko0R5MXIu0/w800-h800/bad%2Bdays%2Bwill%2Bpass.gif" alt="">
     </div>
   </body>
 </html>
